@@ -14,6 +14,11 @@ August 15 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
 August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * added zombie of khaz-zadm	
+
+
+August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>
+
   * coffin (looks are bad) added to catacomb
 	
 August 15 2006 Heikki Sairanen <heikki.sairanen@gmail.com>
